--- a/app/src/main/res/layout/main_activity.xml
+++ b/app/src/main/res/layout/main_activity.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<android.support.design.widget.CoordinatorLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -7,6 +7,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
+
+    <!--<include layout="@layout/activity_base" />-->
 
     <fragment
         android:layout_width="match_parent"
@@ -23,4 +25,4 @@
         android:layout_height="wrap_content"
         app:menu="@menu/menu_bottom_nav" />
 
-</LinearLayout>
+</android.support.design.widget.CoordinatorLayout>
