--- a/app/src/main/res/layout/toolbar_base.xml
+++ b/app/src/main/res/layout/toolbar_base.xml
@@ -1,12 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.widget.Toolbar
+<androidx.appcompat.widget.Toolbar
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/id_toolbar"
+    android:id="@+id/toolbar"
     android:layout_width="match_parent"
-    android:layout_height="?attr/actionBarSize"
+    android:layout_height="wrap_content"
     android:background="?attr/colorPrimary"
-    app:popupTheme="@style/AppTheme.PopupOverlay">
+    android:minHeight="?attr/actionBarSize"
+    android:theme="?attr/actionBarTheme" >
 
     <!--<TextView-->
         <!--android:id="@+id/toolbar_title"-->
@@ -16,4 +17,4 @@
         <!--style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"-->
         <!--android:layout_gravity="center"/>-->
 
-</android.widget.Toolbar>
+</androidx.appcompat.widget.Toolbar>
