--- a/app/src/main/res/layout/main_activity.xml
+++ b/app/src/main/res/layout/main_activity.xml
@@ -18,19 +18,13 @@
         app:defaultNavHost="true"
         app:navGraph="@navigation/navigation" />
 
+    <!-- TBA, will co-exist with FAB. -->
     <!--<com.google.android.material.bottomnavigation.BottomNavigationView-->
         <!--android:id="@+id/id_bottom_nav_view"-->
         <!--android:layout_width="match_parent"-->
         <!--android:layout_height="wrap_content"-->
         <!--android:layout_gravity="bottom|center"-->
         <!--app:menu="@menu/menu_bottom_nav" >-->
-
-        <!--<com.google.android.material.floatingactionbutton.FloatingActionButton-->
-            <!--android:id="@+id/floatingActionButton"-->
-            <!--android:layout_width="wrap_content"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:clickable="true"-->
-            <!--app:srcCompat="@color/colorAccent" />-->
     <!--</com.google.android.material.bottomnavigation.BottomNavigationView>-->
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
