--- a/app/src/main/res/layout/edit_fragment.xml
+++ b/app/src/main/res/layout/edit_fragment.xml
@@ -33,7 +33,8 @@
         android:typeface="normal"
         app:layout_constraintLeft_toRightOf="@+id/tvRaceCity"
         android:layout_marginTop="32dp"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        android:importantForAutofill="no" />
 
     <TextView
         android:text="@string/race_code"
@@ -59,7 +60,8 @@
         app:layout_constraintLeft_toLeftOf="@+id/etCityCode"
         android:textColor="#000000"
         android:textStyle="bold"
-        android:typeface="normal"/>
+        android:typeface="normal"
+        android:importantForAutofill="no" />
 
     <TextView
         android:text="@string/race_no"
@@ -87,7 +89,8 @@
         android:typeface="normal"
         android:inputType="number"
         android:imeOptions="actionDone"
-        android:maxLength="2"/>
+        android:maxLength="2"
+        android:importantForAutofill="no" />
 
     <TextView
         android:text="@string/race_sel"
@@ -115,7 +118,8 @@
         android:typeface="normal"
         android:inputType="number"
         android:imeOptions="actionDone"
-        android:maxLength="2"/>
+        android:maxLength="2"
+        android:importantForAutofill="no" />
 
 
     <TextView
@@ -140,7 +144,8 @@
         android:textStyle="bold"
         android:typeface="normal"
         app:layout_constraintLeft_toLeftOf="@+id/etRaceSel"
-        app:layout_constraintTop_toBottomOf="@+id/etRaceSel" />
+        app:layout_constraintTop_toBottomOf="@+id/etRaceSel"
+        android:importantForAutofill="no" />
 
     <Button
         android:text="@string/save"
