--- a/app/src/main/res/layout/edit_fragment.xml
+++ b/app/src/main/res/layout/edit_fragment.xml
@@ -131,9 +131,10 @@
 
     <EditText
         android:id="@+id/etRaceTime"
-        android:layout_width="wrap_content"
+        android:layout_width="64dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
+        android:inputType="time"
         android:textAppearance="@android:style/TextAppearance.Material.Large"
         android:textColor="#000000"
         android:textStyle="bold"
