--- a/app/src/main/res/layout/edit_fragment.xml
+++ b/app/src/main/res/layout/edit_fragment.xml
@@ -31,6 +31,7 @@
         android:textColor="#000000"
         android:textStyle="bold"
         android:typeface="normal"
+        android:inputType="textCapCharacters"
         app:layout_constraintLeft_toRightOf="@+id/tvRaceCity"
         android:layout_marginTop="32dp"
         app:layout_constraintTop_toTopOf="parent" />
