--- a/app/src/main/res/navigation/navigation.xml
+++ b/app/src/main/res/navigation/navigation.xml
@@ -23,9 +23,16 @@
         <action
             android:id="@+id/action_id_edit_fragment_to_dialogRaceCodes"
             app:destination="@id/id_race_codes" />
+        <action
+            android:id="@+id/action_id_edit_fragment_to_dialogCityCodes"
+            app:destination="@id/id_city_codes" />
     </fragment>
     <fragment
         android:id="@+id/id_race_codes"
         android:name="mcssoft.com.racereminderac.ui.main.DialogRaceCodes"
         android:label="DialogRaceCodes" />
+    <fragment
+        android:id="@+id/id_city_codes"
+        android:name="mcssoft.com.racereminderac.ui.main.DialogCityCodes"
+        android:label="DialogCityCodes" />
 </navigation>
