--- a/app/src/main/res/values/integers.xml
+++ b/app/src/main/res/values/integers.xml
@@ -2,4 +2,10 @@
 <resources>
     <integer name="city_codes_dialog_id">0</integer>
     <integer name="race_codes_dialog_id">1</integer>
+
+    <integer name="race_default">-1</integer>
+    <integer name="keycode_cancel">-3</integer>
+    <integer name="keycode_done">-4</integer>
+    <integer name="keycode_delete">-5</integer>
+
 </resources>
