--- a/app/src/main/res/layout/edit_fragment.xml
+++ b/app/src/main/res/layout/edit_fragment.xml
@@ -155,4 +155,14 @@
         android:layout_marginTop="24dp"
         app:layout_constraintTop_toBottomOf="@+id/etRaceTime" />
 
+    <android.inputmethodservice.KeyboardView
+        android:id="@+id/id_kbdView"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center|bottom"
+        android:fitsSystemWindows="true"
+        android:focusable="true"
+        android:focusableInTouchMode="true"
+        android:visibility="gone" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
