--- a/app/src/main/res/layout/edit_fragment.xml
+++ b/app/src/main/res/layout/edit_fragment.xml
@@ -31,10 +31,10 @@
         android:textColor="#000000"
         android:textStyle="bold"
         android:typeface="normal"
-        android:inputType="textCapCharacters"
         app:layout_constraintLeft_toRightOf="@+id/tvRaceCity"
         android:layout_marginTop="32dp"
         app:layout_constraintTop_toTopOf="parent" />
+    <!--android:inputType="textCapCharacters"-->
 
     <TextView
         android:text="@string/race_code"
@@ -86,9 +86,10 @@
         android:textColor="#000000"
         android:textStyle="bold"
         android:typeface="normal"
-        android:inputType="number"
-        android:imeOptions="actionDone"
         android:maxLength="2" />
+    <!--android:inputType="number"-->
+    <!--android:imeOptions="actionDone"-->
+
 
     <TextView
         android:text="@string/race_sel"
@@ -114,9 +115,9 @@
         android:textColor="#000000"
         android:textStyle="bold"
         android:typeface="normal"
-        android:inputType="number"
-        android:imeOptions="actionDone"
         android:maxLength="2" />
+    <!--android:inputType="number"-->
+    <!--android:imeOptions="actionDone"-->
 
     <TextView
         android:text="@string/race_time"
@@ -135,13 +136,13 @@
         android:layout_width="64dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
-        android:inputType="time"
         android:textAppearance="@android:style/TextAppearance.Material.Large"
         android:textColor="#000000"
         android:textStyle="bold"
         android:typeface="normal"
         app:layout_constraintLeft_toLeftOf="@+id/etRaceSel"
         app:layout_constraintTop_toBottomOf="@+id/etRaceSel" />
+    <!--android:inputType="time"-->
 
     <Button
         android:text="@string/save"
@@ -155,14 +156,17 @@
         android:layout_marginTop="24dp"
         app:layout_constraintTop_toBottomOf="@+id/etRaceTime" />
 
-    <android.inputmethodservice.KeyboardView
-        android:id="@+id/id_kbdView"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center|bottom"
-        android:fitsSystemWindows="true"
-        android:focusable="true"
-        android:focusableInTouchMode="true"
-        android:visibility="gone" />
+    <!--<android.inputmethodservice.KeyboardView-->
+        <!--android:id="@+id/id_kbdView"-->
+        <!--android:layout_width="fill_parent"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:fitsSystemWindows="true"-->
+        <!--android:focusable="true"-->
+        <!--android:focusableInTouchMode="true"-->
+        <!--android:gravity="center|bottom"-->
+        <!--android:visibility="gone"-->
+        <!--app:layout_constraintBottom_toBottomOf="parent"-->
+        <!--app:layout_constraintEnd_toEndOf="parent"-->
+        <!--app:layout_constraintStart_toStartOf="parent" />-->
 
 </androidx.constraintlayout.widget.ConstraintLayout>
