--- a/app/src/main/res/xml/num_sel_keyboard.xml
+++ b/app/src/main/res/xml/num_sel_keyboard.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <Keyboard xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/id_num_sel_kbd"
     android:keyWidth="12.5%p"
     android:keyHeight="10%p">
     <Row>
