--- a/app/src/main/res/xml/city_codes_keyboard.xml
+++ b/app/src/main/res/xml/city_codes_keyboard.xml
@@ -1,12 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
 <Keyboard xmlns:android="http://schemas.android.com/apk/res/android"
-    android:keyWidth="12.5%p"
-    android:keyHeight="10%p">
-
+android:keyWidth="12.5%p"
+android:keyHeight="10%p">
     <Row>
-
+        <Key android:codes="41" android:keyLabel="A" android:keyEdgeFlags="left" />
+        <Key android:codes="42" android:keyLabel="B" />
+        <Key android:codes="43" android:keyLabel="C" />
+        <Key android:codes="44" android:keyLabel="D" />
+        <Key android:codes="45" android:keyLabel="E" />
+        <Key android:codes="46" android:keyLabel="F" />
     </Row>
     <Row>
-
+        <Key android:codes="49" android:keyLabel="I" android:keyEdgeFlags="left" />
+        <Key android:codes="4C" android:keyLabel="L" />
+        <Key android:codes="4D" android:keyLabel="M" />
+        <Key android:codes="4E" android:keyLabel="N" />
+        <Key android:codes="4F" android:keyLabel="O" />
+        <Key android:codes="50" android:keyLabel="P" />
+    </Row>
+    <Row>
+        <Key android:codes="51" android:keyLabel="Q" android:keyEdgeFlags="left" />
+        <Key android:codes="53" android:keyLabel="S" />
+        <Key android:codes="54" android:keyLabel="T" />
+        <Key android:codes="56" android:keyLabel="V" />
+        <Key android:codes="58" android:keyLabel="X" />
+        <Key android:codes="5A" android:keyLabel="Z" />
+    </Row>
+    <Row>
+        <Key android:codes="-5" android:keyLabel="DEL" android:keyEdgeFlags="left" />
+        <Key android:codes="-3" android:keyLabel="CANCL" />
+        <Key android:codes="-4" android:keyLabel="DONE" android:horizontalGap="18.75%p" />
     </Row>
 </Keyboard>
