--- a/app/src/main/res/xml/race_codes_keyboard.xml
+++ b/app/src/main/res/xml/race_codes_keyboard.xml
@@ -2,11 +2,15 @@
 <Keyboard xmlns:android="http://schemas.android.com/apk/res/android"
     android:keyWidth="12.5%p"
     android:keyHeight="10%p">
-
     <Row>
-
+        <Key android:codes="52"   android:keyLabel="R" android:keyEdgeFlags="left" />
+        <Key android:codes="54"   android:keyLabel="T" />
+        <Key android:codes="47"   android:keyLabel="G" />
+        <Key android:codes="4F"   android:keyLabel="O" />
     </Row>
     <Row>
-
+        <Key android:codes="-5" android:keyLabel="DEL" android:keyEdgeFlags="left" />
+        <Key android:codes="-3" android:keyLabel="CANCL" />
+        <Key android:codes="-4" android:keyLabel="DONE" android:horizontalGap="18.75%p" />
     </Row>
 </Keyboard>
