--- a/app/src/main/res/layout/edit_fragment.xml
+++ b/app/src/main/res/layout/edit_fragment.xml
@@ -21,7 +21,7 @@
         android:textColor="#000000"
         android:typeface="normal" />
 
-    <EditText
+    <mcssoft.com.racereminderac.utility.RaceEditText
         android:layout_width="48dp"
         android:layout_height="wrap_content"
         android:id="@+id/etCityCode"
@@ -33,8 +33,8 @@
         android:typeface="normal"
         app:layout_constraintLeft_toRightOf="@+id/tvRaceCity"
         android:layout_marginTop="32dp"
-        app:layout_constraintTop_toTopOf="parent" />
-    <!--android:inputType="textCapCharacters"-->
+        app:layout_constraintTop_toTopOf="parent"
+        android:inputType="textCapCharacters" />
 
     <TextView
         android:text="@string/race_code"
