--- a/app/src/main/res/layout/edit_fragment.xml
+++ b/app/src/main/res/layout/edit_fragment.xml
@@ -21,7 +21,7 @@
         android:textColor="#000000"
         android:typeface="normal" />
 
-    <mcssoft.com.racereminderac.utility.RaceEditText
+    <EditText
         android:layout_width="48dp"
         android:layout_height="wrap_content"
         android:id="@+id/etCityCode"
@@ -33,8 +33,8 @@
         android:typeface="normal"
         app:layout_constraintLeft_toRightOf="@+id/tvRaceCity"
         android:layout_marginTop="32dp"
-        app:layout_constraintTop_toTopOf="parent"
-        android:inputType="textCapCharacters" />
+        app:layout_constraintTop_toTopOf="parent" />
+        <!--android:inputType="text|textCapCharacters|textNoSuggestions|textFilter" />-->
 
     <TextView
         android:text="@string/race_code"
@@ -60,7 +60,8 @@
         app:layout_constraintLeft_toLeftOf="@+id/etCityCode"
         android:textColor="#000000"
         android:textStyle="bold"
-        android:typeface="normal" />
+        android:typeface="normal"
+        android:inputType="text|textCapCharacters|textNoSuggestions|textFilter"/>
 
     <TextView
         android:text="@string/race_no"
@@ -141,8 +142,8 @@
         android:textStyle="bold"
         android:typeface="normal"
         app:layout_constraintLeft_toLeftOf="@+id/etRaceSel"
-        app:layout_constraintTop_toBottomOf="@+id/etRaceSel" />
-    <!--android:inputType="time"-->
+        app:layout_constraintTop_toBottomOf="@+id/etRaceSel"
+        android:inputType="time" />
 
     <Button
         android:text="@string/save"
