--- a/app/src/main/res/layout/edit_fragment.xml
+++ b/app/src/main/res/layout/edit_fragment.xml
@@ -34,7 +34,6 @@
         app:layout_constraintLeft_toRightOf="@+id/tvRaceCity"
         android:layout_marginTop="32dp"
         app:layout_constraintTop_toTopOf="parent" />
-        <!--android:inputType="text|textCapCharacters|textNoSuggestions|textFilter" />-->
 
     <TextView
         android:text="@string/race_code"
@@ -60,8 +59,7 @@
         app:layout_constraintLeft_toLeftOf="@+id/etCityCode"
         android:textColor="#000000"
         android:textStyle="bold"
-        android:typeface="normal"
-        android:inputType="text|textCapCharacters|textNoSuggestions|textFilter"/>
+        android:typeface="normal"/>
 
     <TextView
         android:text="@string/race_no"
@@ -87,9 +85,9 @@
         android:textColor="#000000"
         android:textStyle="bold"
         android:typeface="normal"
-        android:maxLength="2" />
-    <!--android:inputType="number"-->
-    <!--android:imeOptions="actionDone"-->
+        android:maxLength="2"
+    android:inputType="number"
+    android:imeOptions="actionDone" />
 
 
     <TextView
@@ -116,9 +114,9 @@
         android:textColor="#000000"
         android:textStyle="bold"
         android:typeface="normal"
-        android:maxLength="2" />
-    <!--android:inputType="number"-->
-    <!--android:imeOptions="actionDone"-->
+        android:maxLength="2"
+    android:inputType="number"
+    android:imeOptions="actionDone" />
 
     <TextView
         android:text="@string/race_time"
