--- a/app/src/main/res/layout/edit_fragment.xml
+++ b/app/src/main/res/layout/edit_fragment.xml
@@ -85,9 +85,7 @@
         android:textColor="#000000"
         android:textStyle="bold"
         android:typeface="normal"
-        android:maxLength="2"
-    android:inputType="number"
-    android:imeOptions="actionDone" />
+        android:maxLength="2" />
 
 
     <TextView
@@ -114,9 +112,7 @@
         android:textColor="#000000"
         android:textStyle="bold"
         android:typeface="normal"
-        android:maxLength="2"
-    android:inputType="number"
-    android:imeOptions="actionDone" />
+        android:maxLength="2" />
 
     <TextView
         android:text="@string/race_time"
@@ -140,8 +136,7 @@
         android:textStyle="bold"
         android:typeface="normal"
         app:layout_constraintLeft_toLeftOf="@+id/etRaceSel"
-        app:layout_constraintTop_toBottomOf="@+id/etRaceSel"
-        android:inputType="time" />
+        app:layout_constraintTop_toBottomOf="@+id/etRaceSel" />
 
     <Button
         android:text="@string/save"
@@ -154,18 +149,5 @@
         app:layout_constraintLeft_toLeftOf="@+id/tvRaceTime"
         android:layout_marginTop="24dp"
         app:layout_constraintTop_toBottomOf="@+id/etRaceTime" />
-
-    <!--<android.inputmethodservice.KeyboardView-->
-        <!--android:id="@+id/id_kbdView"-->
-        <!--android:layout_width="fill_parent"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:fitsSystemWindows="true"-->
-        <!--android:focusable="true"-->
-        <!--android:focusableInTouchMode="true"-->
-        <!--android:gravity="center|bottom"-->
-        <!--android:visibility="gone"-->
-        <!--app:layout_constraintBottom_toBottomOf="parent"-->
-        <!--app:layout_constraintEnd_toEndOf="parent"-->
-        <!--app:layout_constraintStart_toStartOf="parent" />-->
 
 </androidx.constraintlayout.widget.ConstraintLayout>
