--- a/app/src/main/res/layout/race_codes.xml
+++ b/app/src/main/res/layout/race_codes.xml
@@ -6,30 +6,38 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_gravity="center">
+    <!--android:stateListAnimator="@drawable/btn_state_selector">-->
 
     <TextView
         android:id="@+id/id_tv_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="8dp"
         android:gravity="center_vertical|center_horizontal"
-        android:text="Race Codes"
+        android:text="@string/rc_title"
+        android:textAppearance="@android:style/TextAppearance.Material.Large"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/id_top_guideline"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="32dp"
         android:orientation="horizontal"
-        app:layout_constraintGuide_begin="32dp" />
+        app:layout_constraintGuide_begin="48dp" />
 
     <Button
         android:id="@+id/id_rc_btn_R"
         android:layout_width="48dp"
         android:layout_height="48dp"
+        android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
-        android:text="R"
-        app:layout_constraintTop_toTopOf="@+id/id_top_guideline" />
+        android:text="@string/rc_R"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/id_top_guideline"
+        android:background="@drawable/btn_selector"/>
+        <!--android:background="@drawable/btn_round"/>-->
 
     <Button
         android:id="@+id/id_rc_btn_T"
@@ -37,7 +45,7 @@
         android:layout_height="48dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
-        android:text="T"
+        android:text="@string/rc_T"
         app:layout_constraintStart_toEndOf="@+id/id_rc_btn_R"
         app:layout_constraintTop_toTopOf="@+id/id_top_guideline" />
 
@@ -47,7 +55,7 @@
         android:layout_height="48dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
-        android:text="G"
+        android:text="@string/rc_G"
         app:layout_constraintStart_toEndOf="@+id/id_rc_btn_T"
         app:layout_constraintTop_toTopOf="@+id/id_top_guideline" />
 
@@ -57,7 +65,7 @@
         android:layout_height="48dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
-        android:text="S"
+        android:text="@string/rc_S"
         app:layout_constraintStart_toEndOf="@+id/id_rc_btn_G"
         app:layout_constraintTop_toTopOf="@+id/id_top_guideline" />
 
@@ -66,7 +74,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:layout_constraintGuide_begin="96dp" />
+        app:layout_constraintGuide_begin="112dp" />
 
     <Button
         android:id="@+id/id_rc_btn_ok"
@@ -84,10 +92,12 @@
         android:id="@+id/id_rc_btn_cancel"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
         android:layout_marginTop="16dp"
         android:layout_marginBottom="8dp"
         android:text="Cancel"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/id-bottom_guideline" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
